--- a/views/index.haml
+++ b/views/index.haml
@@ -1,2 +1,8 @@
 %h1= title
-%p Welcome!
+#activity
+  - each post in posts
+    %div.post
+      %div.created_at= post.created_at
+      %div.post
+        %a{href: "/activity/" + post._id.toHexString()} link
+      %div.body= post.body
