--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,11 @@
 !!! 5
 %html
   %head
-    %title= title
+    %title= "psychoti.ca!"
     %link{rel: 'stylesheet', href: '/stylesheets/style.css', type: 'text/css'}
   %body
+    #header 
+      %h1 psychoti.ca
+    .post-form
+      != partial('postform')
     != body
