move activity/post to post

--- a/views/partials/postform.haml
+++ b/views/partials/postform.haml
@@ -1,4 +1,4 @@
-%form{ action: '/activity/post', method: 'post' }
+%form{ action: '/post', method: 'post' }
   %div
     %textarea{ name: 'body' }
   %div.form-buttons
