work on profiles - in progress

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,13 @@ html(lang='en')
       #header
         h1
           a(href='/')= title
+        - if (user)
+          nav
+            ul
+              li
+                a(href="/settings") settings
+              li
+                a(href="/logout") logout
       #content!= body
       footer
         &copy 2011 
