--- a/views/login.jade
+++ b/views/login.jade
@@ -1,8 +1,8 @@
 form(method='post', action='/login')
-  .username
+  .form-element
     label username
       input(type='text', name='username')
-  .password
+  .form-element
     label password
       input(type='password', name='password')
   .form-buttons
