--- a/views/_entry.jade
+++ b/views/_entry.jade
@@ -1,6 +1,6 @@
 article.activity.hentry
-  .type= activity.type
-  .object.entry-title.entry-content= activity.object
+  .type= activity.verb
+  .object.entry-title.entry-content= activity.content
   .link.bookmark
     a(href="/activity/" + activity.id)
-      abbr.updated(title: activity.created_iso)= activity.created_ago
+      abbr.updated(title: activity.published_iso)= activity.published_ago
