--- a/views/_postbox.jade
+++ b/views/_postbox.jade
@@ -1,9 +1,8 @@
 form(action='/activity', method="post")
   div
     .type
-      label post
-        input(type='radio', name='type', value='post', checked) 
-    .object
-      textarea(name='object')
+      input(type='hidden', name='verb', value='post')
+    .content
+      textarea(name='content')
   .form-buttons
     input(type="submit", value="post")
