--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,17 @@
 html(lang='en')
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='/javascripts/jquery.js')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='/css/bootstrap-responsive.min.css')
   body
-    #container
-      #header
-        h1
-          a(href='/')= title
-      #content!= body
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          a.brand(href="/")= title
+    .container
+      .content!= body
       footer
         &copy 2011 
         a(href='http://walkah.net/') walkah
+    script(src='/js/bootstrap.min.js')
