--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@
 html(lang='en')
   head
     title= title
+    meta(,name="viewport",content="width=device-width, initial-scale=1.0")
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/style.css')
     link(rel='stylesheet', href='/css/bootstrap-responsive.min.css')
