--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,17 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    meta(name='viewport', content='width=device-width,initial-scale=1')
+
     title= title
+
+    link(rel='stylesheet', href='/lib/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+
+    script(type='text/javascript', src='/lib/angular/angular.js')
+    script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap.js')
+    script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap-tpls.js')
